[package]
name = "pineflash"
version = "0.5.2"
edition = "2021"
build = "build.rs"
[[bin]]
name = "pineflash"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_file = "0.9"
zip-extract = "0.1.1"
eframe = "0.22.0"
egui-notify = "0.7.0"
egui_extras = { version = "0.22.0", features = ["image", "svg"] }
rfd = "0.11.3"
whoami = "1.2.3"
serde = { version = "^1.0.145", features = ["derive"] }
serde_json = { version="1.0.89" }
serialport = "4.2.0"
rusb = "0.9"
confy = "0.5.1"
curl = "0.4.44"
simple-home-dir = "0.1.2"

[build-dependencies]
winresource = "0.1.15"
[features]
appimage = []

[package.metadata.appimage]
auto_link = true
assets = ["tools/linux"]
