[package]
name = "pineflash"
version = "0.5.5"
edition = "2021"
build = "build.rs"
[[bin]]
name = "pineflash"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_file = "0.17.0"
zip-extract = "0.1.1"
eframe = "0.27.2"
egui-notify = "0.14.0"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
rfd = "0.11.3"
whoami = "1.2.3"
serde = { version = "^1.0.145", features = ["derive"] }
serde_json = { version="1.0.89" }
serialport = "4.2.0"
rusb = "0.9"
confy = "0.5.1"
curl = "0.4.44"
simple-home-dir = "0.1.2"
version-compare = "0.1.1"

[build-dependencies]
winresource = "0.1.15"
[features]
appimage = []

[package.metadata.appimage]
auto_link = true
assets = ["tools/linux", "tools/appimage"]
